@@ -1,0 +1,3 @@
+# argon2
+
+file /usr/bin/argon2 /usr/bin/argon2 755 0 0
