@@ -2,10 +2,10 @@ Source: linuxmuster-linbo7
 Section: admin
 Priority: extra
 Maintainer: Thomas Schmitt <thomas@linuxmuster.net>
-Build-Depends: acl, bc, binutils, bison, build-essential, coreutils, ctorrent,
-  curl, debianutils, debhelper, dosfstools, dpkg-dev, dropbear-bin, e2fsprogs,
-  efibootmgr, ethtool, fakeroot, flex, fonts-ubuntu, g++, gcc, gcc-multilib,
-  gdisk, gettext, git, gnupg2, gpgv2, grep, grub-common, grub-ipxe,
+Build-Depends: acl, argon2, bc, binutils, bison, build-essential, ctorrent,
+  curl, debianutils, debhelper, dosfstools, dpkg-dev, dropbear-bin,
+  gcc-multilib, e2fsprogs, efibootmgr, ethtool, fakeroot, flex, fonts-ubuntu,
+  g++, gcc, gdisk, gettext, git, gnupg2, gpgv2, grep, grub-common, grub-ipxe,
   grub-efi-amd64-bin, grub2-common, grub-pc-bin, gzip, hdparm, kmod,
   libacl1-dev, libattr1-dev, libelf-dev, libfuse-dev,
   libncurses5-dev, libnih-dbus1, libowfat-dev, linux-libc-dev, nasm,
@@ -17,7 +17,7 @@ Package: linuxmuster-linbo7
 Architecture: all
 Breaks: linuxmuster-linbo-common7
 Conflicts: bittorrent, linuxmuster-linbo-common7, linuxmuster-linbo, linuxmuster-linbo-common, atftpd
-Depends: coreutils, dropbear-bin, rsync (>= 3), ctorrent, isolinux (>= 6.03), syslinux-common (>= 6.03), syslinux-utils (>= 6.03), ssh, sed, tmux, xorriso (>= 1.4.2), dosfstools, udpcast, xz-utils, zip, mbr, wakeonlan, linuxmuster-base7, python3, linuxmuster-linbo-gui7, grub-common, grub-ipxe, grub-pc-bin, grub-efi-amd64-bin, shim-signed, tftpd-hpa (>= 5.2+20150808-1ubuntu1fifopatch), qemu-utils, libowfat0
+Depends: argon2, coreutils, dropbear-bin, rsync (>= 3), ctorrent, isolinux (>= 6.03), syslinux-common (>= 6.03), syslinux-utils (>= 6.03), ssh, sed, tmux, xorriso (>= 1.4.2), dosfstools, udpcast, xz-utils, zip, mbr, wakeonlan, linuxmuster-base7, python3, linuxmuster-linbo-gui7, grub-common, grub-ipxe, grub-pc-bin, grub-efi-amd64-bin, shim-signed, tftpd-hpa (>= 5.2+20150808-1ubuntu1fifopatch), qemu-utils, libowfat0
 Suggests: isc-dhcp-server | dhcp3-server
 Description: linuxmuster-linbo7
  This package contains kernel, initrd, scripts and pxe boot configuration for the Linux-based Network Boot (LINBO) boot/install/repair system.
